CultiBox (1.1.5) precise; urgency=low
    + Ajout de la possibilité de configurer une prise en 3500W ou 100W et changement des adresses et du fichier pluga en conséquence

-- Yann Genevois <yann.genevois@gmail.com>  Wed Feb 27 10:40:15 CET 2013


CultiBox (1.1.4) precise; urgency=low
    + Correction pour la gestion des updates qui restait affiché même après une update
    + Correction de l'import des programmes qui n'importait qu la prise 1
    + Le formatage de la carte SD se fait dans la configuration
    + Le temps d'une session est de 120s maintenant au lieu de 14400s
    + Correction de l'affichage du waiting
    + Nouveaux scripts pour la génération des paquets Linux (gestion des upgrades et des scripts de sauvegarde des bases)

-- Yann Genevois <yann.genevois@gmail.com>  Tue Feb  5 14:14:08 CET 2013


CultiBox (1.1.3) precise; urgency=low

    + Une page waiting (la même que les logs) apparait maintenant quand on format une carte SD pour la rendre compatible Cultibox
    + Le Browser Web du client est testé afin de savoir s'il est compatible avec le logiciel Cultibox, si non un message d'information apparait sur la page du Welcome
    + Correction d'un bug critique concernant l'ajout des valeurs des programmes, une variable manquante empechait d'ajouter des programmes autres que On/Off
    + Ajouts de tooltips pour aider l'utilisateur à comprendre les fonctions de gestion des logs
    + Bug fixe pour l'offset dans la fonction de formatage du fichier de conf de la carte SD
    + Bug fix sur la régulation secondaire et la valeur enregistrée dans les fichiers plugXX
    + Possibilité de désactiver une prise dans le logiciel et de ne pas avoir les informations relative à cette prise affichée
    + Détection d'une carte SD de plus de 2Go et blocage de la fonction formatage pour ces cartes (pour rester sur du FAT16)
    + Possibilité de ne pas afficher le programme courant 