@@ -156,11 +156,9 @@ if(strcmp($select_plug,"distinct_all")!=0) {
 // Check for update availables. If an update is availabe, the link to this update is displayed with the informations div
 if(strcmp("$update","True")==0) {
       $ret=array();
-      check_update_available($ret,$main_error);
+      check_update_available($version,$ret,$main_error);
       foreach($ret as $file) {
-         if((count($file)==3)&&(strcmp("$version","$file[1]")!=0)) {
                 $main_info[]=__('INFO_UPDATE_AVAILABLE')." <a href=".$file[2]." target='_blank'>".$file[1]."</a>";
-           }
       }
 }
 
